fix: retirnado gap da classe content dentro do componente card

--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -116,7 +116,6 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 8px;
 
       /* Inside auto layout */
       flex: none;
